# webber

./: CMakeLists.txt  giff.pl  giffer.py  giffer3.py  partitions.csv  sdkconfig
img/: giff.pl
main/: CMakeLists.txt  cie.cpp  cog.h  creds.c  creds.h  giffer.py  idf_component.yml  led_strip_encoder.c  led_strip_encoder.h  life.c  life.h  logo.c  logo.h  main.c  main.h  nvs_mgr.c  nvs_mgr.h  oled_i2c.c  oled_i2c.h  parse_post.c  pixel_magic.c  proj.h  rotary_encoder.c  rotary_encoder.h  screen.c  screen.h  sdcard.h  sddcard.c  server.c  server.h  shitty_rotary_encoder_handler.c  super.c  tv.c  tv.h  websock.c  websock.h  wifi_man (Copy).c.baj  wifi_man.c
main/ui/: bright.h  cog2.h  cog3.h  cog3_hi_res.h  dial.h  icons.h  icons2.h  loop16.xcf  modes.h  projector.h  ui_state.c  ui_state.h
spiff/: 7495726.xcf  about.html  delete.html  froot.html  index.html  root.html  shit.css  text.html  toot.html  wifi.html
spiff/convert/: projector.h  projector_all.h
